# fastguard

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml  setup.py
fastguard/: __main__.py  analyzer.py  cli.py  collector.py  depcheck.py  models.py  report.py  scanner.py  vulndb.py
