[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastguard"
version = "1.0.0"
description = "AI-powered security scanner for Python FastAPI backends using OpenCode"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "FastGuard" },
]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/manishk-variyas/fastguard"

[project.scripts]
fastguard = "fastguard.cli:app"

[dependency-groups]
dev = ["ruff>=0.9.0", "pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["fastguard*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE", "B", "A", "C4", "SIM", "ARG", "PTH", "ERA"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
